[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlayerAnimations.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/PlayerBody.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GraplingHook.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[node name="PlayerBody" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "HookHoldLight"
frame = 3
playing = true

[node name="FadeEffect1" type="AnimatedSprite" parent="PlayerSprite"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -2, 0 )
z_index = -1
frames = ExtResource( 1 )
animation = "ChargeWalk"
frame = 6
playing = true

[node name="FadeEffect2" type="AnimatedSprite" parent="PlayerSprite"]
visible = false
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( -4, 0 )
z_index = -1
frames = ExtResource( 1 )
animation = "ChargeWalk"
frame = 6
playing = true

[node name="PlayerTween" type="Tween" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="GraplingHook" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, -1 )
z_as_relative = false

[node name="StepTimer" type="Timer" parent="."]

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.075

[connection signal="animation_finished" from="PlayerSprite" to="." method="AnimationFinished"]
[connection signal="timeout" from="StepTimer" to="." method="StepTimerInterval"]
[connection signal="timeout" from="GhostTimer" to="." method="CreateGhost"]
